templates/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <APP_NAME>-service
spec:
  selector:
    app: <APP_NAME>
  ports:
    - port: 80
      targetPort: <APP_PORT>
